package project.Soliders;

public enum EUnitProperties {
HP, ARMOR, ATTACKSPEED, MAGICRESIST
}
